WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235989
Crash under ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged()
https://bugs.webkit.org/show_bug.cgi?id=235989
Summary
Crash under ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged()
Simon Fraser (smfr)
Reported
2022-02-01 16:52:40 PST
Crash under ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged()
Attachments
Patch
(1.87 KB, patch)
2022-02-01 16:55 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-02-01 16:55:19 PST
Created
attachment 450592
[details]
Patch
Simon Fraser (smfr)
Comment 2
2022-02-01 16:55:23 PST
<
rdar://problem/87402941
>
EWS
Comment 3
2022-02-01 17:42:39 PST
Committed
r288933
(
246663@main
): <
https://commits.webkit.org/246663@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450592
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug