Cherry-pick r288933. rdar://problem/87402941

Crash under ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged()
    https://bugs.webkit.org/show_bug.cgi?id=235989
    <rdar://87402941>

    Reviewed by Wenson Hsieh.

    Crash data suggest that m_scrollingCoordinator can be null in ThreadedScrollingTree::hasNodeWithAnimatedScrollChanged(),
    which is true if the scrolling tree keeps ThreadedScrollingTree alive longer than the scrolling coordinator.

    As in the other functions in this file, early return if m_scrollingCoordinator is null.

    * page/scrolling/ThreadedScrollingTree.cpp:
    (WebCore::ThreadedScrollingTree::hasNodeWithAnimatedScrollChanged):

    Canonical link: https://commits.webkit.org/246663@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288933 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.85@safari-613.1.16.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613.1.16.1-branch@289393 268f45cc-cd09-0410-ab3c-d52691b4dbfc